--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,13 @@
         android:ems="10"
         android:inputType="textUri"
         android:minHeight="48dp"
-        app:layout_constraintBottom_toBottomOf="@+id/goButton"
-        app:layout_constraintEnd_toStartOf="@+id/goButton"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
+        app:layout_constraintEnd_toStartOf="@+id/imageButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/goButton" />
+        app:layout_constraintTop_toTopOf="@+id/imageButton" />
 
     <ImageButton
-        android:id="@+id/goButton"
+        android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
